# cuda-cource-2025

works/RAMIISSA2/Lab 3/: CMakeLists.txt  ReadMe.md  profile.ncu-rep  profile_shared.ncu-rep
works/RAMIISSA2/Lab 3/assets/: sample_1.pgm  sample_2.pgm  sample_3.pgm  sample_4.pgm  sample_5.pgm
works/RAMIISSA2/Lab 3/include/: image_io.h
works/RAMIISSA2/Lab 3/src/: image_io.cpp  sobel.cu  sobel_shared.cu
works/as-harlamov/lab1/: Makefile  README.md
works/as-harlamov/lab1/src/: main.cu
works/as-harlamov/lab4/: Makefile  README.md
works/as-harlamov/lab4/src/: main.cu  sort.cu  sort.h  utils.h
works/cherednikov-eo/lab_3/: Makefile  README.md
works/cherednikov-eo/lab_3/images/: bird_sobel.pgm
works/cherednikov-eo/lab_3/include/: error_check.cuh  image_io.cuh
works/cherednikov-eo/lab_3/src/: image_io.cu  main.cu
works/gromov_na/lab1/: Makefile  README.md
works/gromov_na/lab1/src/: square.cu
works/konstantinov_aa/lab4/: .gitignore  Makefile  README.md
works/konstantinov_aa/lab4/src/: rs_opt.cu
works/konstantinov_aa/lab5/: .gitignore  CMakeLists.txt  README.md
works/konstantinov_aa/lab5/scripts/: export_model.py  quantize_int8.sh
works/konstantinov_aa/lab5/src/: lab5_types.h  main.cpp  postprocess_gpu.cu  postprocess_gpu.h
works/rvkrisanov/lab1/: Makefile  README.md
works/rvkrisanov/lab1/include/: error_check.cuh
works/rvkrisanov/lab1/src/: main.cu
works/rvkrisanov/lab2/: BENCHMARK_ANALYSIS.md  Makefile  README.md
works/rvkrisanov/lab2/src/: main.cu  matrix_multiply_cuda.cu  matrix_multiply_cuda_tiled.cu
